--- a/MoneyKeeper/MoneyKeeper/Storyboards/AddOperation.storyboard
+++ b/MoneyKeeper/MoneyKeeper/Storyboards/AddOperation.storyboard
@@ -8,10 +8,10 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
+        <!--Add Operation View Controller-->
         <scene sceneID="s0d-6b-0kx">
             <objects>
-                <viewController id="Y6W-OH-hqX" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="AddOperation" id="Y6W-OH-hqX" customClass="AddOperationViewController" customModule="MoneyKeeper" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="T53-cf-ZUY">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -36,48 +36,78 @@
                                 <color key="backgroundColor" white="0.33333333329999998" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             </stackView>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="50" translatesAutoresizingMaskIntoConstraints="NO" id="usQ-fS-W1A">
-                                <rect key="frame" x="15" y="193.5" width="384" height="118"/>
+                                <rect key="frame" x="15" y="193.5" width="384" height="378"/>
                                 <subviews>
+                                    <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="w7m-Fm-tAl">
+                                        <rect key="frame" x="30" y="30" width="324" height="51"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="50" id="6RO-1R-zrc"/>
+                                        </constraints>
+                                        <segments>
+                                            <segment title="Exist"/>
+                                            <segment title="New"/>
+                                        </segments>
+                                        <color key="selectedSegmentTintColor" systemColor="systemYellowColor"/>
+                                        <connections>
+                                            <action selector="changeSelectors:" destination="Y6W-OH-hqX" eventType="valueChanged" id="O4E-fE-Mbs"/>
+                                        </connections>
+                                    </segmentedControl>
                                     <stackView opaque="NO" contentMode="scaleToFill" alignment="center" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="P1z-yY-1Rk">
-                                        <rect key="frame" x="0.0" y="0.0" width="384" height="34"/>
+                                        <rect key="frame" x="30" y="130" width="324" height="34"/>
                                         <subviews>
-                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Name:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="AtD-Pr-5FF">
-                                                <rect key="frame" x="0.0" y="6" width="73.5" height="22.5"/>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Category:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="AtD-Pr-5FF">
+                                                <rect key="frame" x="0.0" y="6" width="86.5" height="22.5"/>
                                                 <fontDescription key="fontDescription" name="Palatino-Roman" family="Palatino" pointSize="20"/>
                                                 <nil key="textColor"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
-                                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Account name" textAlignment="natural" minimumFontSize="17" clearButtonMode="whileEditing" translatesAutoresizingMaskIntoConstraints="NO" id="9bG-YD-zaM">
-                                                <rect key="frame" x="83.5" y="0.0" width="300.5" height="34"/>
+                                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Category name" textAlignment="natural" minimumFontSize="17" clearButtonMode="whileEditing" translatesAutoresizingMaskIntoConstraints="NO" id="9bG-YD-zaM">
+                                                <rect key="frame" x="96.5" y="0.0" width="227.5" height="34"/>
                                                 <fontDescription key="fontDescription" name="Palatino-Roman" family="Palatino" pointSize="20"/>
                                                 <textInputTraits key="textInputTraits" autocapitalizationType="words" autocorrectionType="yes" spellCheckingType="yes" returnKeyType="done" enablesReturnKeyAutomatically="YES"/>
                                             </textField>
                                         </subviews>
                                     </stackView>
+                                    <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="fs5-tW-YC4">
+                                        <rect key="frame" x="30" y="214" width="324" height="51"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="50" id="GFz-JP-ry1"/>
+                                        </constraints>
+                                        <segments>
+                                            <segment title="Withdraw"/>
+                                            <segment title="Income"/>
+                                        </segments>
+                                        <color key="selectedSegmentTintColor" systemColor="systemYellowColor"/>
+                                        <connections>
+                                            <action selector="changeSelectors:" destination="Y6W-OH-hqX" eventType="valueChanged" id="N1Z-oI-bLA"/>
+                                        </connections>
+                                    </segmentedControl>
                                     <stackView opaque="NO" contentMode="scaleToFill" alignment="center" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="ybM-e5-5vc">
-                                        <rect key="frame" x="0.0" y="84" width="384" height="34"/>
+                                        <rect key="frame" x="30" y="314" width="324" height="34"/>
                                         <subviews>
-                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Balance:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="26D-ox-eSH">
-                                                <rect key="frame" x="0.0" y="6" width="73.5" height="22.5"/>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Amount:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="26D-ox-eSH">
+                                                <rect key="frame" x="0.0" y="6" width="86.5" height="22.5"/>
                                                 <fontDescription key="fontDescription" name="Palatino-Roman" family="Palatino" pointSize="20"/>
                                                 <nil key="textColor"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
                                             <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="0.00" textAlignment="natural" minimumFontSize="17" clearButtonMode="whileEditing" translatesAutoresizingMaskIntoConstraints="NO" id="n3r-Cb-csq">
-                                                <rect key="frame" x="83.5" y="0.0" width="300.5" height="34"/>
+                                                <rect key="frame" x="96.5" y="0.0" width="227.5" height="34"/>
                                                 <fontDescription key="fontDescription" name="Palatino-Roman" family="Palatino" pointSize="20"/>
                                                 <textInputTraits key="textInputTraits" autocorrectionType="no" spellCheckingType="no" keyboardType="decimalPad"/>
                                             </textField>
                                         </subviews>
                                     </stackView>
                                 </subviews>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
                                     <constraint firstItem="AtD-Pr-5FF" firstAttribute="width" secondItem="26D-ox-eSH" secondAttribute="width" id="4e0-zv-gl6"/>
                                 </constraints>
+                                <edgeInsets key="layoutMargins" top="30" left="30" bottom="30" right="30"/>
                             </stackView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="GU8-En-c7O"/>
-                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <color key="backgroundColor" red="0.1960767508" green="0.24313795569999999" blue="0.32548889520000002" alpha="0.91000000000000003" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
                             <constraint firstItem="usQ-fS-W1A" firstAttribute="leading" secondItem="GU8-En-c7O" secondAttribute="leading" constant="15" id="3av-Ct-qG6"/>
                             <constraint firstItem="RrZ-2k-jeD" firstAttribute="height" secondItem="T53-cf-ZUY" secondAttribute="height" multiplier="0.1" id="9Ud-XH-O4o"/>
@@ -88,6 +118,13 @@
                             <constraint firstItem="GU8-En-c7O" firstAttribute="trailing" secondItem="usQ-fS-W1A" secondAttribute="trailing" constant="15" id="zON-ud-vtd"/>
                         </constraints>
                     </view>
+                    <connections>
+                        <outlet property="amountText" destination="n3r-Cb-csq" id="jiH-J3-2jc"/>
+                        <outlet property="categoryText" destination="9bG-YD-zaM" id="hv0-Q8-uxU"/>
+                        <outlet property="categoryType" destination="fs5-tW-YC4" id="CEl-Yq-T8o"/>
+                        <outlet property="detailedStack" destination="usQ-fS-W1A" id="zjO-Xk-CsK"/>
+                        <outlet property="newOrExist" destination="w7m-Fm-tAl" id="qcR-ER-wfR"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Ief-a0-LHa" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
@@ -96,8 +133,8 @@
     </scenes>
     <resources>
         <image name="dollarsign.circle" catalog="system" width="128" height="121"/>
-        <systemColor name="systemBackgroundColor">
-            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        <systemColor name="systemYellowColor">
+            <color red="1" green="0.80000000000000004" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
     </resources>
 </document>
