--- a/MoneyKeeper/MoneyKeeper/Storyboards/SecondStoryboard.storyboard
+++ b/MoneyKeeper/MoneyKeeper/Storyboards/SecondStoryboard.storyboard
@@ -8,6 +8,14 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
+        <!--AddOperation-->
+        <scene sceneID="6Ab-nq-05h">
+            <objects>
+                <viewControllerPlaceholder storyboardName="AddOperation" referencedIdentifier="AddOperation" id="R81-9r-ntd" sceneMemberID="viewController"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="xAy-0E-gfQ" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="282" y="224"/>
+        </scene>
         <!--Main-->
         <scene sceneID="s0d-6b-0kx">
             <objects>
@@ -34,6 +42,9 @@
                                             <fontDescription key="titleFontDescription" name="AppleSDGothicNeo-Regular" family="Apple SD Gothic Neo" pointSize="12"/>
                                             <color key="baseBackgroundColor" systemColor="systemGray2Color"/>
                                         </buttonConfiguration>
+                                        <connections>
+                                            <segue destination="R81-9r-ntd" kind="presentation" id="hs7-CC-tV2"/>
+                                        </connections>
                                     </button>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="d5q-as-6wQ">
                                         <rect key="frame" x="181" y="0.0" width="70.5" height="28.5"/>
